# gpubootcamp

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
ai/: README.md
ai/DeepStream/: Dockerfile  README.md  Singularity
ai/DeepStream_Perf_Lab/: Dockerfile  README.md  Singularity
ai/DeepStream_Perf_Lab/English/python/source_code/distancing/: CMakeLists.txt  distancing.cu
ai/Distributed_Deep_Learning/: Dockerfile  README.md  Singularity
ai/Megatron/: Dockerfile  README.md
ai/RAPIDS/: .Dockerfile.swp  Dockerfile  README.MD  Singularity
ai/RIVA/: Readme.md
archived/: README.md  README.txt
archived/ai/: README.md
archived/ai/DeepStream/: Dockerfile  README.md  Singularity
archived/ai/Distributed_Deep_Learning/: Dockerfile  Singularity
archived/ai/RAPIDS/: Dockerfile  README.MD
archived/hpc/miniprofiler/: Dockerfile
archived/hpc/multi_gpu_nways/: README.md
archived/hpc/nways/: Dockerfile_python  (+2 more)
archived/hpc_ai/: README.md
experimental/: README.md  README.txt
experimental/TAO_Transfer_Learning/: Dockerfile  README.md  Singularity
hpc/: README.md
hpc/miniprofiler/: Dockerfile  README.md  Singularity
hpc/multi_gpu_nways/: Dockerfile  README.md  Singularity  mgpm  slurm-165592.out  slurm-171483.out
hpc/nways/: Dockerfile  Dockerfile_python  README.md  Singularity  Singularity_python
hpc/openacc/: Dockerfile  README.md  Singularity
hpc_ai/: README.md
hpc_ai/PINN/: Dockerfile  README.MD  Singularity
hpc_ai/ai_science_cfd/: Dockerfile  README.MD  Singularity
hpc_ai/ai_science_climate/: Dockerfile  README.MD  Singularity
(+920 files in other folders)
